examples/invalid/missing-end.por
algoritmo "broken"

inicio
    escreva(1)
